--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         .dream-bubble { position: relative; background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); border-radius: 50px; padding: 15px 25px; border: 1px solid rgba(255,255,255,0.1); margin: 20px; display: inline-block; }
         .dream-bubble::after { content: ''; position: absolute; background: rgba(255, 255, 255, 0.1); border-radius: 50%; width: 15px; height: 15px; bottom: -20px; left: 30px; }
         .hidden { display: none; }
+        .cat-btn.active { background: #dc2626; color: white; border-color: #dc2626; }
+        .badge-cat { background: rgba(220, 38, 38, 0.15); color: #ef4444; border: 1px solid rgba(220, 38, 38, 0.3); }
     </style>
 </head>
 <body class="pb-32">
@@ -29,10 +31,14 @@
         </div>
     </header>
 
-    <div class="px-6 mt-6">
+    <div class="px-6 mt-6 space-y-4">
         <div class="glass flex items-center px-4 py-3 rounded-2xl border border-white/10">
             <i class="fa-solid fa-magnifying-glass text-gray-500 mr-3 text-sm"></i>
             <input type="text" id="input-busca" onkeyup="buscarLocal()" placeholder="PESQUISAR..." class="bg-transparent w-full text-[10px] font-bold outline-none uppercase text-white">
+        </div>
+        
+        <div id="lista-categorias" class="flex gap-2 overflow-x-auto pb-2 scrollbar-hide">
+            <button onclick="filtrarCategoria('TODOS', this)" class="cat-btn active flex-shrink-0 px-4 py-2 rounded-full border border-white/10 text-[9px] font-black uppercase tracking-widest transition-all">TODOS</button>
         </div>
     </div>
 
@@ -69,7 +75,7 @@
         </div>
     </div>
 
-    <div id="toast" class="fixed bottom-28 left-6 right-6 bg-red-600 p-4 rounded-2xl text-[10px] font-bold text-center z-50 hidden">O seu produto foi adicionado ao carrinho clique no ícone abaixo para verificar</div>
+    <div id="toast" class="fixed bottom-28 left-6 right-6 bg-red-600 p-4 rounded-2xl text-[10px] font-bold text-center z-50 hidden">O seu produto foi adicionado ao carrinho</div>
 
     <nav class="fixed bottom-8 left-6 right-6 h-16 glass rounded-[2rem] flex justify-around items-center px-4 shadow-2xl border border-white/10">
         <i onclick="location.reload()" class="fa-solid fa-house-chimney text-red-600 text-lg cursor-pointer"></i>
@@ -96,35 +102,73 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
         let carrinho = [];
+        let categoriaAtiva = "TODOS";
 
-        // Carregar Produtos com verificação de Vazio
-        onSnapshot(collection(db, "produtos"), (snapshot) => {
-            const grid = document.getElementById('produtos-grid');
-            grid.innerHTML = "";
-            
-            if (snapshot.empty) {
-                grid.innerHTML = `<p class="col-span-2 text-center text-gray-600 text-xs italic mt-10 uppercase font-bold tracking-widest">Sem nenhum producto ainda!</p>`;
-                return;
-            }
-
-            snapshot.forEach((doc) => {
-                const p = doc.data();
-                grid.innerHTML += `
-                <div class="bg-[#0f0f0f] border border-white/5 rounded-[2.5rem] p-4 flex flex-col justify-between product-card">
-                    <div>
-                        <div class="bg-black rounded-[2rem] h-32 mb-4 overflow-hidden"><img src="${p.foto}" class="h-full w-full object-cover"></div>
-                        <h3 class="text-[11px] font-extrabold uppercase leading-tight">${p.nome}</h3>
-                        <p class="text-[9px] text-gray-500 font-medium mt-1">${p.desc || ''}</p>
-                    </div>
-                    <div class="mt-4 flex justify-between items-center">
-                        <p class="text-red-600 font-black text-xs italic">${p.preco} MT</p>
-                        <button onclick="window.addCart('${p.nome}', '${p.preco}', '${p.foto}')" class="w-8 h-8 bg-red-600 rounded-lg flex items-center justify-center"><i class="fa-solid fa-plus text-white text-[10px]"></i></button>
-                    </div>
-                </div>`;
+        onSnapshot(collection(db, "categorias"), (snapshot) => {
+            const container = document.getElementById('lista-categorias');
+            container.innerHTML = `<button onclick="filtrarCategoria('TODOS', this)" class="cat-btn ${categoriaAtiva === 'TODOS' ? 'active' : ''} flex-shrink-0 px-4 py-2 rounded-full border border-white/10 text-[9px] font-black uppercase tracking-widest transition-all">TODOS</button>`;
+            snapshot.forEach(doc => {
+                const cat = doc.data().nome;
+                container.innerHTML += `<button onclick="filtrarCategoria('${cat}', this)" class="cat-btn ${categoriaAtiva === cat ? 'active' : ''} flex-shrink-0 px-4 py-2 rounded-full border border-white/10 text-[9px] font-black uppercase tracking-widest transition-all">${cat}</button>`;
             });
         });
 
-        // Configurações (Logo e Aviso)
+        window.filtrarCategoria = (cat, btn) => {
+            categoriaAtiva = cat;
+            document.querySelectorAll('.cat-btn').forEach(b => b.classList.remove('active'));
+            btn.classList.add('active');
+            carregarProdutos(cat);
+        };
+
+        function carregarProdutos(catFiltrada = "TODOS") {
+            const grid = document.getElementById('produtos-grid');
+            onSnapshot(collection(db, "produtos"), (snapshot) => {
+                grid.innerHTML = "";
+                let categoriasMap = {};
+
+                snapshot.forEach(doc => {
+                    const data = doc.data();
+                    const cat = data.categoria || "GERAL";
+                    if(catFiltrada === "TODOS" || cat === catFiltrada) {
+                        if (!categoriasMap[cat]) categoriasMap[cat] = [];
+                        categoriasMap[cat].push({...data, id: doc.id});
+                    }
+                });
+
+                if (Object.keys(categoriasMap).length === 0) {
+                    grid.innerHTML = `<p class="col-span-2 text-center text-gray-600 text-xs italic mt-10 uppercase font-bold tracking-widest">Sem produtos!</p>`;
+                    return;
+                }
+
+                for (let categoria in categoriasMap) {
+                    // Título da Categoria
+                    const title = document.createElement('div');
+                    title.className = "col-span-2 mt-4 mb-2 border-l-4 border-red-600 pl-3";
+                    title.innerHTML = `<h2 class="text-sm font-black text-white uppercase italic tracking-widest">${categoria}</h2>`;
+                    grid.appendChild(title);
+
+                    // Produtos da Categoria
+                    categoriasMap[categoria].forEach(p => {
+                        const card = document.createElement('div');
+                        card.className = "bg-[#0f0f0f] border border-white/5 rounded-[2.5rem] p-4 flex flex-col justify-between product-card";
+                        card.innerHTML = `
+                            <div>
+                                <div class="bg-black rounded-[2rem] h-32 mb-4 overflow-hidden"><img src="${p.foto}" class="h-full w-full object-cover"></div>
+                                <h3 class="text-[11px] font-extrabold uppercase leading-tight">${p.nome}</h3>
+                                <p class="text-[9px] text-gray-500 font-medium mt-1">${p.desc || ''}</p>
+                            </div>
+                            <div class="mt-4 flex justify-between items-center">
+                                <p class="text-red-600 font-black text-xs italic">${p.preco} MT</p>
+                                <button onclick="window.addCart('${p.nome}', '${p.preco}', '${p.foto}')" class="w-8 h-8 bg-red-600 rounded-lg flex items-center justify-center"><i class="fa-solid fa-plus text-white text-[10px]"></i></button>
+                            </div>`;
+                        grid.appendChild(card);
+                    });
+                }
+            });
+        }
+
+        carregarProdutos();
+
         onSnapshot(collection(db, "config"), (snapshot) => {
             snapshot.forEach(doc => {
                 const data = doc.data();
@@ -188,3 +232,4 @@
     </script>
 </body>
 </html>
+
