--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AFS Marketplace | Online</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap');
@@ -16,8 +15,16 @@
         .hidden { display: none; }
         .cat-btn.active { background: #dc2626; color: white; border-color: #dc2626; }
         
-        /* Estilo para suavizar a entrada antes da animação carregar */
-        .product-card { opacity: 0; }
+        /* ANIMAÇÃO DE SCROLL (CSS NATIVO) */
+        .reveal {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: all 0.8s ease-out;
+        }
+        .reveal.active {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
 </head>
 <body class="pb-32">
@@ -34,7 +41,7 @@
         </div>
     </header>
 
-    <div class="px-6 mt-6 space-y-4 reveal-top">
+    <div class="px-6 mt-6 space-y-4">
         <div class="glass flex items-center px-4 py-3 rounded-2xl border border-white/10">
             <i class="fa-solid fa-magnifying-glass text-gray-500 mr-3 text-sm"></i>
             <input type="text" id="input-busca" onkeyup="buscarLocal()" placeholder="PESQUISAR..." class="bg-transparent w-full text-[10px] font-bold outline-none uppercase text-white">
@@ -45,7 +52,7 @@
         </div>
     </div>
 
-    <div class="flex justify-center mt-2 reveal-top">
+    <div class="flex justify-center mt-2">
         <div class="dream-bubble">
             <p id="txt-aviso" class="text-[9px] font-bold uppercase tracking-widest text-white text-center italic">Carregando...</p>
         </div>
@@ -106,14 +113,19 @@
         let carrinho = [];
         let categoriaAtiva = "TODOS";
 
-        // Configuração Inicial do ScrollReveal
-        const sr = ScrollReveal({
-            origin: 'bottom',
-            distance: '30px',
-            duration: 1000,
-            delay: 200,
-            reset: false // Para animar apenas uma vez ao descer
-        });
+        // FUNÇÃO DE SCROLL REVEAL NATIVA
+        function handleScroll() {
+            const reveals = document.querySelectorAll('.reveal');
+            reveals.forEach(el => {
+                const windowHeight = window.innerHeight;
+                const revealTop = el.getBoundingClientRect().top;
+                const revealPoint = 50;
+                if (revealTop < windowHeight - revealPoint) {
+                    el.classList.add('active');
+                }
+            });
+        }
+        window.addEventListener('scroll', handleScroll);
 
         onSnapshot(collection(db, "categorias"), (snapshot) => {
             const container = document.getElementById('lista-categorias');
@@ -122,7 +134,6 @@
                 const cat = doc.data().nome;
                 container.innerHTML += `<button onclick="filtrarCategoria('${cat}', this)" class="cat-btn ${categoriaAtiva === cat ? 'active' : ''} flex-shrink-0 px-4 py-2 rounded-full border border-white/10 text-[9px] font-black uppercase tracking-widest transition-all">${cat}</button>`;
             });
-            sr.reveal('.cat-btn', { interval: 100 });
         });
 
         window.filtrarCategoria = (cat, btn) => {
@@ -147,20 +158,15 @@
                     }
                 });
 
-                if (Object.keys(categoriasMap).length === 0) {
-                    grid.innerHTML = `<p class="col-span-2 text-center text-gray-600 text-xs italic mt-10 uppercase font-bold tracking-widest">Sem produtos!</p>`;
-                    return;
-                }
-
                 for (let categoria in categoriasMap) {
                     const title = document.createElement('div');
-                    title.className = "col-span-2 mt-4 mb-2 border-l-4 border-red-600 pl-3 reveal-cat";
+                    title.className = "col-span-2 mt-4 mb-2 border-l-4 border-red-600 pl-3 reveal";
                     title.innerHTML = `<h2 class="text-sm font-black text-white uppercase italic tracking-widest">${categoria}</h2>`;
                     grid.appendChild(title);
 
                     categoriasMap[categoria].forEach(p => {
                         const card = document.createElement('div');
-                        card.className = "bg-[#0f0f0f] border border-white/5 rounded-[2.5rem] p-4 flex flex-col justify-between product-card";
+                        card.className = "bg-[#0f0f0f] border border-white/5 rounded-[2.5rem] p-4 flex flex-col justify-between product-card reveal";
                         card.innerHTML = `
                             <div>
                                 <div class="bg-black rounded-[2rem] h-32 mb-4 overflow-hidden"><img src="${p.foto}" class="h-full w-full object-cover"></div>
@@ -175,9 +181,8 @@
                     });
                 }
                 
-                // DISPARAR ANIMAÇÃO NOS NOVOS ELEMENTOS
-                sr.reveal('.reveal-cat', { origin: 'left', distance: '50px' });
-                sr.reveal('.product-card', { interval: 100, scale: 0.9, opacity: 0 });
+                // Dispara a verificação logo após injetar os produtos
+                setTimeout(handleScroll, 100);
             });
         }
 
@@ -189,10 +194,9 @@
                 if(data.aviso) document.getElementById('txt-aviso').innerText = data.aviso;
                 if(data.logo) document.getElementById('logo-markt').src = data.logo;
             });
-            sr.reveal('.reveal-top', { origin: 'top' });
         });
 
-        // Funções de Carrinho (Mantidas conforme original)
+        // Carrinho e Checkout (Mantidos)
         window.addCart = (nome, preco, foto) => {
             carrinho.push({nome, preco, foto});
             document.getElementById('cart-count').innerText = carrinho.length;
