--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
         .hidden { display: none; }
         .cat-btn.active { background: #dc2626; color: white; border-color: #dc2626; }
         
-        /* ANIMAÇÃO DE SCROLL (CSS NATIVO) */
+        /* ANIMAÇÃO DE ENTRADA E SAÍDA (SCROLL DINÂMICO) */
         .reveal {
             opacity: 0;
-            transform: translateY(30px);
-            transition: all 0.8s ease-out;
+            transform: translateY(40px) scale(0.9);
+            transition: all 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            visibility: hidden;
         }
         .reveal.active {
             opacity: 1;
-            transform: translateY(0);
+            transform: translateY(0) scale(1);
+            visibility: visible;
         }
     </style>
 </head>
@@ -61,6 +63,17 @@
     <section id="produtos-grid" class="p-6 grid grid-cols-2 gap-5">
         </section>
 
+    <nav class="fixed bottom-8 left-6 right-6 h-16 glass rounded-[2rem] flex justify-around items-center px-4 shadow-2xl border border-white/10">
+        <i onclick="location.reload()" class="fa-solid fa-house-chimney text-red-600 text-lg cursor-pointer"></i>
+        <div class="relative" onclick="window.abrirCarrinhoUI()">
+            <i class="fa-solid fa-cart-shopping text-gray-500 text-lg"></i>
+            <span id="cart-count" class="absolute -top-2 -right-2 bg-red-600 text-[8px] w-4 h-4 rounded-full flex items-center justify-center font-bold">0</span>
+        </div>
+        <i onclick="location.href='login.html'" class="fa-regular fa-user text-gray-500 text-lg cursor-pointer"></i>
+    </nav>
+
+    <div id="toast" class="fixed bottom-28 left-6 right-6 bg-red-600 p-4 rounded-2xl text-[10px] font-bold text-center z-50 hidden">Adicionado ao carrinho!</div>
+
     <div id="modal-carrinho" class="fixed inset-0 z-[100] glass flex items-end justify-center hidden">
         <div class="bg-[#0a0a0a] w-full max-h-[80vh] rounded-t-[3rem] p-8 overflow-y-auto border-t border-white/10 shadow-2xl">
             <div class="flex justify-between items-center mb-6">
@@ -74,26 +87,14 @@
 
     <div id="modal-checkout" class="fixed inset-0 z-[110] glass flex items-center justify-center p-6 hidden">
         <div class="bg-black border border-white/10 w-full rounded-[2.5rem] p-8 space-y-4">
-            <h2 class="text-xl font-black italic uppercase text-red-600">Finalizar Entrega</h2>
+            <h2 class="text-xl font-black italic uppercase text-red-600">Entrega</h2>
             <input type="text" id="f-nome" placeholder="SEU NOME" class="w-full bg-white/5 p-4 rounded-xl text-[10px] font-bold border border-white/5 outline-none text-white">
             <input type="number" id="f-tel" placeholder="SEU NÚMERO" class="w-full bg-white/5 p-4 rounded-xl text-[10px] font-bold border border-white/5 outline-none text-white">
             <input type="number" id="f-qtd" placeholder="QUANTIDADES" class="w-full bg-white/5 p-4 rounded-xl text-[10px] font-bold border border-white/5 outline-none text-white">
-            <input type="text" id="f-local" placeholder="LOCAL DA ENTREGA" class="w-full bg-white/5 p-4 rounded-xl text-[10px] font-bold border border-white/5 outline-none text-white">
-            <button id="btn-finalizar" class="w-full bg-red-600 p-4 rounded-xl font-black text-xs uppercase">Confirmar e Enviar</button>
-            <button onclick="document.getElementById('modal-checkout').classList.add('hidden')" class="w-full text-[9px] font-bold text-gray-500 uppercase">Voltar</button>
+            <input type="text" id="f-local" placeholder="LOCAL" class="w-full bg-white/5 p-4 rounded-xl text-[10px] font-bold border border-white/5 outline-none text-white">
+            <button id="btn-finalizar" class="w-full bg-red-600 p-4 rounded-xl font-black text-xs uppercase">Confirmar</button>
         </div>
     </div>
-
-    <div id="toast" class="fixed bottom-28 left-6 right-6 bg-red-600 p-4 rounded-2xl text-[10px] font-bold text-center z-50 hidden">O seu produto foi adicionado ao carrinho</div>
-
-    <nav class="fixed bottom-8 left-6 right-6 h-16 glass rounded-[2rem] flex justify-around items-center px-4 shadow-2xl border border-white/10">
-        <i onclick="location.reload()" class="fa-solid fa-house-chimney text-red-600 text-lg cursor-pointer"></i>
-        <div class="relative" onclick="window.abrirCarrinhoUI()">
-            <i class="fa-solid fa-cart-shopping text-gray-500 text-lg"></i>
-            <span id="cart-count" class="absolute -top-2 -right-2 bg-red-600 text-[8px] w-4 h-4 rounded-full flex items-center justify-center font-bold">0</span>
-        </div>
-        <i onclick="location.href='login.html'" class="fa-regular fa-user text-gray-500 text-lg cursor-pointer"></i>
-    </nav>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -111,37 +112,18 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
         let carrinho = [];
-        let categoriaAtiva = "TODOS";
 
-        // FUNÇÃO DE SCROLL REVEAL NATIVA
-        function handleScroll() {
-            const reveals = document.querySelectorAll('.reveal');
-            reveals.forEach(el => {
-                const windowHeight = window.innerHeight;
-                const revealTop = el.getBoundingClientRect().top;
-                const revealPoint = 50;
-                if (revealTop < windowHeight - revealPoint) {
-                    el.classList.add('active');
+        // --- LÓGICA DE ANIMAÇÃO AO SUBIR E DESCER ---
+        const observerOptions = { threshold: 0.1 };
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('active');
+                } else {
+                    entry.target.classList.remove('active'); // Remove para animar de novo ao voltar
                 }
             });
-        }
-        window.addEventListener('scroll', handleScroll);
-
-        onSnapshot(collection(db, "categorias"), (snapshot) => {
-            const container = document.getElementById('lista-categorias');
-            container.innerHTML = `<button onclick="filtrarCategoria('TODOS', this)" class="cat-btn ${categoriaAtiva === 'TODOS' ? 'active' : ''} flex-shrink-0 px-4 py-2 rounded-full border border-white/10 text-[9px] font-black uppercase tracking-widest transition-all">TODOS</button>`;
-            snapshot.forEach(doc => {
-                const cat = doc.data().nome;
-                container.innerHTML += `<button onclick="filtrarCategoria('${cat}', this)" class="cat-btn ${categoriaAtiva === cat ? 'active' : ''} flex-shrink-0 px-4 py-2 rounded-full border border-white/10 text-[9px] font-black uppercase tracking-widest transition-all">${cat}</button>`;
-            });
-        });
-
-        window.filtrarCategoria = (cat, btn) => {
-            categoriaAtiva = cat;
-            document.querySelectorAll('.cat-btn').forEach(b => b.classList.remove('active'));
-            btn.classList.add('active');
-            carregarProdutos(cat);
-        };
+        }, observerOptions);
 
         function carregarProdutos(catFiltrada = "TODOS") {
             const grid = document.getElementById('produtos-grid');
@@ -163,10 +145,11 @@
                     title.className = "col-span-2 mt-4 mb-2 border-l-4 border-red-600 pl-3 reveal";
                     title.innerHTML = `<h2 class="text-sm font-black text-white uppercase italic tracking-widest">${categoria}</h2>`;
                     grid.appendChild(title);
+                    observer.observe(title); // Começa a observar o título
 
                     categoriasMap[categoria].forEach(p => {
                         const card = document.createElement('div');
-                        card.className = "bg-[#0f0f0f] border border-white/5 rounded-[2.5rem] p-4 flex flex-col justify-between product-card reveal";
+                        card.className = "bg-[#0f0f0f] border border-white/5 rounded-[2.5rem] p-4 flex flex-col justify-between reveal";
                         card.innerHTML = `
                             <div>
                                 <div class="bg-black rounded-[2rem] h-32 mb-4 overflow-hidden"><img src="${p.foto}" class="h-full w-full object-cover"></div>
@@ -178,15 +161,27 @@
                                 <button onclick="window.addCart('${p.nome}', '${p.preco}', '${p.foto}')" class="w-8 h-8 bg-red-600 rounded-lg flex items-center justify-center"><i class="fa-solid fa-plus text-white text-[10px]"></i></button>
                             </div>`;
                         grid.appendChild(card);
+                        observer.observe(card); // Começa a observar o card
                     });
                 }
-                
-                // Dispara a verificação logo após injetar os produtos
-                setTimeout(handleScroll, 100);
             });
         }
 
-        carregarProdutos();
+        // --- RESTANTE DAS FUNÇÕES (CATEGORIAS, CONFIG, CARRINHO) ---
+        onSnapshot(collection(db, "categorias"), (snapshot) => {
+            const container = document.getElementById('lista-categorias');
+            container.innerHTML = `<button onclick="filtrarCategoria('TODOS', this)" class="cat-btn active flex-shrink-0 px-4 py-2 rounded-full border border-white/10 text-[9px] font-black uppercase tracking-widest transition-all">TODOS</button>`;
+            snapshot.forEach(doc => {
+                const cat = doc.data().nome;
+                container.innerHTML += `<button onclick="filtrarCategoria('${cat}', this)" class="cat-btn flex-shrink-0 px-4 py-2 rounded-full border border-white/10 text-[9px] font-black uppercase tracking-widest transition-all">${cat}</button>`;
+            });
+        });
+
+        window.filtrarCategoria = (cat, btn) => {
+            document.querySelectorAll('.cat-btn').forEach(b => b.classList.remove('active'));
+            btn.classList.add('active');
+            carregarProdutos(cat);
+        };
 
         onSnapshot(collection(db, "config"), (snapshot) => {
             snapshot.forEach(doc => {
@@ -196,27 +191,20 @@
             });
         });
 
-        // Carrinho e Checkout (Mantidos)
         window.addCart = (nome, preco, foto) => {
             carrinho.push({nome, preco, foto});
             document.getElementById('cart-count').innerText = carrinho.length;
             const t = document.getElementById('toast');
             t.classList.remove('hidden');
-            setTimeout(() => t.classList.add('hidden'), 4000);
+            setTimeout(() => t.classList.add('hidden'), 3000);
         };
 
         window.abrirCarrinhoUI = () => {
-            if(carrinho.length === 0) return alert("Carrinho vazio!");
+            if(carrinho.length === 0) return alert("Vazio!");
             const lista = document.getElementById('lista-carrinho');
             lista.innerHTML = "";
-            carrinho.forEach((item) => {
-                lista.innerHTML += `
-                <div class="flex items-center justify-between bg-white/5 p-4 rounded-2xl border border-white/5">
-                    <div class="flex items-center gap-3">
-                        <img src="${item.foto}" class="w-10 h-10 rounded-lg object-cover">
-                        <p class="text-[10px] font-black uppercase">${item.nome}</p>
-                    </div>
-                </div>`;
+            carrinho.forEach(item => {
+                lista.innerHTML += `<div class="bg-white/5 p-4 rounded-xl flex items-center gap-3"><img src="${item.foto}" class="w-10 h-10 rounded object-cover"><p class="text-[10px] font-bold">${item.nome}</p></div>`;
             });
             document.getElementById('modal-carrinho').classList.remove('hidden');
         };
@@ -235,20 +223,24 @@
                 itens: carrinho.map(c => c.nome).join(", "),
                 data: new Date().toLocaleString()
             };
-            if(!pedido.cliente || !pedido.tel) return alert("Preencha os dados!");
             await addDoc(collection(db, "pedidos"), pedido);
-            alert("Pedido enviado!");
+            alert("Pedido Enviado!");
             location.reload();
         };
 
         window.buscarLocal = () => {
             let busca = document.getElementById('input-busca').value.toUpperCase();
-            let cards = document.getElementsByClassName('product-card');
-            for (let card of cards) {
-                let nome = card.querySelector('h3').innerText.toUpperCase();
-                card.style.display = nome.includes(busca) ? "" : "none";
-            }
+            let cards = document.querySelectorAll('.reveal');
+            cards.forEach(card => {
+                let h3 = card.querySelector('h3');
+                if(h3) {
+                    card.style.display = h3.innerText.toUpperCase().includes(busca) ? "" : "none";
+                }
+            });
         };
+
+        carregarProdutos();
     </script>
 </body>
 </html>
+
